[gd_scene load_steps=18 format=2]

[ext_resource path="res://Script/Titles.gd" type="Script" id=1]
[ext_resource path="res://Escenas/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Musica/MenuMusic.tscn" type="PackedScene" id=3]
[ext_resource path="res://Escenas/SeleccionDeNiveles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Players/acorn/acorn-1.png" type="Texture" id=5]
[ext_resource path="res://logo (1).png" type="Texture" id=6]
[ext_resource path="res://press-enter-text.png" type="Texture" id=7]
[ext_resource path="res://title-screen2.png" type="Texture" id=8]
[ext_resource path="res://credits.png" type="Texture" id=9]
[ext_resource path="res://title-screen.png" type="Texture" id=10]
[ext_resource path="res://Texto/Fuente.tres" type="DynamicFont" id=11]
[ext_resource path="res://boton back.png" type="Texture" id=12]
[ext_resource path="res://Loading.png" type="Texture" id=14]
[ext_resource path="res://Punto.png" type="Texture" id=15]
[ext_resource path="res://Punto2.png" type="Texture" id=16]
[ext_resource path="res://Punto3.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "Cargando",
"speed": 5.0
} ]

[node name="Titles" type="Node"]
script = ExtResource( 1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="Nuces" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Nuces"]
position = Vector2( 650.755, 268.931 )
scale = Vector2( 2.84442, 2.58139 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Nuces"]
position = Vector2( 530.123, 268.931 )
scale = Vector2( 2.84442, 2.58139 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="Nuces"]
position = Vector2( 409.488, 270.098 )
scale = Vector2( 2.84442, 2.58139 )
texture = ExtResource( 5 )

[node name="Sprite4" type="Sprite" parent="Nuces"]
position = Vector2( 588.273, 268.931 )
scale = Vector2( 2.84442, 2.58139 )
texture = ExtResource( 5 )

[node name="Sprite5" type="Sprite" parent="Nuces"]
position = Vector2( 343.834, 270.098 )
scale = Vector2( 2.84442, 2.58139 )
texture = ExtResource( 5 )

[node name="Sprite6" type="Sprite" parent="Nuces"]
position = Vector2( 472.307, 267.765 )
scale = Vector2( 2.84442, 2.58139 )
texture = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.281
anchor_bottom = 1.067
margin_left = -0.260998
margin_right = -1023.3
margin_bottom = -0.200012
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 620.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 6 )

[node name="Inicio" type="Button" parent="."]
anchor_left = 0.377
anchor_top = 0.773
anchor_right = 0.614
anchor_bottom = 0.852
margin_left = 0.277008
margin_top = 0.199951
margin_right = -0.0860291
margin_bottom = -0.200043
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Inicio"]
position = Vector2( 92.3149, 21.9732 )
scale = Vector2( 2.3588, 2.75392 )
texture = ExtResource( 7 )

[node name="Creditos" type="Sprite" parent="."]
position = Vector2( 71.9254, 570.786 )
scale = Vector2( 0.763371, 0.38765 )
texture = ExtResource( 8 )

[node name="Creditos" type="Button" parent="Creditos"]
anchor_right = 0.76
anchor_bottom = 0.721
margin_left = -75.0
margin_top = -43.5796
margin_right = -143.88
margin_bottom = -96.0116
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Creditos/Creditos"]
position = Vector2( 72.0488, 44.6232 )
scale = Vector2( 1, 1.69697 )
texture = ExtResource( 9 )

[node name="title-Inicio" type="Sprite" parent="."]
visible = false
position = Vector2( 496.274, 398.042 )
scale = Vector2( 2.63163, 2.31789 )
texture = ExtResource( 10 )

[node name="Button-Inicio" type="Button" parent="title-Inicio"]
margin_left = -37.8778
margin_top = 32.8032
margin_right = 38.1222
margin_bottom = 52.8032
flat = true

[node name="Move" type="Label" parent="title-Inicio/Button-Inicio"]
margin_left = -20.3874
margin_top = -23.1469
margin_right = 19.6126
margin_bottom = -9.14694
text = "Move"

[node name="Shoot" type="Label" parent="title-Inicio/Button-Inicio"]
margin_left = 58.0598
margin_top = -23.1469
margin_right = 98.0598
margin_bottom = -9.14694
text = "Shoot"

[node name="Creditos2" type="Sprite" parent="."]
visible = false
position = Vector2( 345.85, 428.869 )
scale = Vector2( 1.7399, 2.20148 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Creditos2"]
position = Vector2( 192.815, 4.45934 )
scale = Vector2( 1.14728, 0.870968 )
texture = ExtResource( 8 )

[node name="Label2" type="Label" parent="Creditos2"]
margin_left = -68.0
margin_top = -40.0
margin_right = 125.0
margin_bottom = 58.0
rect_scale = Vector2( 0.7, 0.8 )
custom_fonts/font = ExtResource( 11 )
text = "programmers:
Azcuenaga Cristian
Ignacio Peralta
Fuentes Nicolas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Creditos2"]
margin_left = 118.792
margin_top = -26.1797
margin_right = 311.792
margin_bottom = 50.8203
rect_scale = Vector2( 0.7, 0.8 )
custom_fonts/font = ExtResource( 11 )
text = "Music and
Level Design:
Francisco Baumann"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atras" type="Button" parent="Creditos2"]
margin_left = -92.0
margin_top = -55.0
margin_right = -73.0
margin_bottom = -35.0
flat = true

[node name="Sprite" type="Sprite" parent="Creditos2/Atras"]
position = Vector2( 11.2044, 10.0523 )
scale = Vector2( 0.594481, 0.615617 )
texture = ExtResource( 12 )

[node name="Menu" parent="." instance=ExtResource( 3 )]

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -143.089
margin_top = -55.0966
margin_right = -73.0885
margin_bottom = -37.0966
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.890196, 0, 1 )
text = "(V 0.5.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Loading" type="Sprite" parent="."]
visible = false
position = Vector2( 495.949, 268.495 )
texture = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Loading"]
frames = SubResource( 1 )
animation = "Cargando"

[node name="Button" type="Button" parent="."]
visible = false
anchor_left = 0.008
anchor_top = 0.013
anchor_right = 0.111
anchor_bottom = 0.148
margin_left = -0.392
margin_top = 0.2
margin_right = 0.310989
margin_bottom = 0.199997
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 39.1127, 40.2843 )
scale = Vector2( 1.7487, 1.51426 )
texture = ExtResource( 12 )

[node name="SeleccionDeNiveles" parent="." instance=ExtResource( 4 )]
position = Vector2( 0.0421143, 2.29797 )

[connection signal="pressed" from="Inicio" to="." method="_on_Inicio_pressed"]
[connection signal="pressed" from="Creditos/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="title-Inicio/Button-Inicio" to="." method="_on_ButtonInicio_pressed"]
[connection signal="pressed" from="Creditos2/Atras" to="." method="_on_Atras_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
